--- a/RecommenuBeta/RecommenuBeta/Base.lproj/Main.storyboard
+++ b/RecommenuBeta/RecommenuBeta/Base.lproj/Main.storyboard
@@ -1498,11 +1498,24 @@ Special Thanks : Chris Guzman for his service, iCarousel and Reveal Controller t
                                                     <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="10"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2La-Ug-moD">
+                                                    <rect key="frame" x="20" y="9" width="48" height="48"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="2Xz-bI-z4G">
+                                                            <rect key="frame" x="14" y="14" width="20" height="20"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        </activityIndicatorView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                </view>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="friendImage" destination="45h-vl-NYW" id="Inx-ga-8pE"/>
                                             <outlet property="friendNameLabel" destination="tie-eD-df3" id="ubJ-D3-EVY"/>
+                                            <outlet property="indicator" destination="2Xz-bI-z4G" id="MTQ-jn-P1F"/>
+                                            <outlet property="loadingView" destination="2La-Ug-moD" id="YNf-NQ-hXM"/>
                                             <outlet property="numRatingsLabel" destination="X5Z-oO-reH" id="cVS-Jb-hYK"/>
                                             <segue destination="nPB-js-U8b" kind="push" identifier="profileToOtherProfile" id="k7B-Te-j8Z"/>
                                         </connections>
@@ -1665,7 +1678,7 @@ Special Thanks : Chris Guzman for his service, iCarousel and Reveal Controller t
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Loading Menu..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="LQu-h0-eCW">
-                                        <rect key="frame" x="64" y="23" width="193" height="25"/>
+                                        <rect key="frame" x="67" y="23" width="187" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="18"/>
                                         <nil key="highlightedColor"/>
@@ -1677,7 +1690,7 @@ Special Thanks : Chris Guzman for his service, iCarousel and Reveal Controller t
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQO-xT-lNq">
-                                        <rect key="frame" x="0.0" y="8" width="82" height="56"/>
+                                        <rect key="frame" x="0.0" y="8" width="68" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="18"/>
                                         <state key="normal" title="Home">
@@ -2050,7 +2063,7 @@ Special Thanks : Chris Guzman for his service, iCarousel and Reveal Controller t
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LUo-Lx-Yqx">
-                                        <rect key="frame" x="8" y="11" width="57" height="44"/>
+                                        <rect key="frame" x="8" y="20" width="57" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="x_close.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -2060,7 +2073,7 @@ Special Thanks : Chris Guzman for his service, iCarousel and Reveal Controller t
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Y9-B5-lhn">
-                                        <rect key="frame" x="60" y="20" width="200" height="26"/>
+                                        <rect key="frame" x="60" y="29" width="200" height="26"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="19"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -2130,8 +2143,8 @@ Special Thanks : Chris Guzman for his service, iCarousel and Reveal Controller t
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="hBb-60-GB1"/>
-        <segue reference="rFS-ke-nUk"/>
+        <segue reference="cec-ZC-rvl"/>
+        <segue reference="k7B-Te-j8Z"/>
         <segue reference="1ex-Vq-BDP"/>
     </inferredMetricsTieBreakers>
 </document>
